--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vuejs-title": "^1.0.16",
     "vuement": "^0.12.4",
     "vuex": "^3.4.0"
   },
