--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.35.2",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "leaflet": "^1.8.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
@@ -25,6 +26,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.11",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.15",
