--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "leaflet": "^1.8.0",
+    "leaflet-easyprint": "^2.1.9",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
