--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "ol": "^6.14.1",
     "register-service-worker": "^1.7.1",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-class-component": "^7.2.3",
